--- a/anaconda_env.yml
+++ b/anaconda_env.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
   - pytorch
 dependencies:
-  - python>=3.10
+  - python+=3.11
   - plotly<5.4
   - py-xgboost 
   - scikit-learn>=0.21.2
@@ -26,7 +26,7 @@ dependencies:
   - networkx>=3.1
   - holidays
   - seaborn
-  - statsmodels==0.14.0 # Currently bug in 1.7.4.  Can update to newest version if bug is fixed.
+  - statsmodels>=0.14.5 # Currently bug in 1.7.4.  Can update to newest version if bug is fixed.
   - utilsforecast==0.2.5
   # - pytorch::pytorch
   # - pytorch::torchvision
